Fixed html,body overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 
 html,
 body {
-  margin: 0;
+  margin: 0px;
   font-family: "Montserrat", sans-serif;
   background-size: cover;
   background-attachment: fixed;
@@ -16,8 +16,10 @@ body {
     rgb(126, 222, 252) 55%,
     rgb(113, 209, 238) 65%
   );
-  min-height: 100%;
-  padding-bottom: 20%;
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 * {
